# freva-stats-service

./: CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/dependabot/: constraints.txt
.github/workflows/: build_job.yml  ci_job.yml
dev-env/: release.py  start-stop-service.py
examples/: Databrowser-Query-Statistics.ipynb
src/freva_stats_service/: app.py  cli.py  response.py  run.py  utils.py
src/freva_stats_service/docs/: __init__.py
src/freva_stats_service/stats/: __init__.py  databrowser.py
src/freva_stats_service/tests/: __init__.py  conftest.py  test_access.py  test_cli.py  test_databrowser_stats.py
src/freva_storage_service/: _version.py  app.py  cli.py  response.py
src/freva_storage_service/stats/: databrowser.py
src/freva_storage_service/tests/: conftest.py  test_access.py  test_cli.py  test_databrowser_stats.py
